<resources>
    // App name.
    <string name="app_name">sudoku</string>
    // Titles.
    <string name="title_text">Sudoku</string>
    <string name="scoreboard_title_text">Scoreboard</string>
    <string name="settings_title_text">Settings</string>
    // Buttons.
    <string name="play_button_text">Play!</string>
    <string name="settings_button_text">Settings</string>
    <string name="scoreboard_button_text">Scoreboard</string>
    <string name="back_button_text">Back</string>
    <string name="win_button_text">Win</string>
    <string name="lose_button_text">Lose</string>
    // Other.
    <string name="win_text">Good job! You won!</string>
    <string name="lose_text">A disgrace! You lost!</string>
    <string name="dark_mode_setting">Dark Mode</string>
    <string name="volume_setting">Music Volume</string>
    <string name="default_volume_text">100</string>
    // Scoreboard.
    <string name="scoreboard_highest_points">Highest Points</string>
    <string name="scoreboard_best_times">Best Times</string>
    <string name="default_scoreboard_text">No player yet</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="add_highscore_button">Add highscore</string>
    <string name="share_score">Share Score</string>
</resources>