<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenu">

        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_text"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_button_text" />

            <Button
                android:id="@+id/button_scoreboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scoreboard_button_text" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_text" />
        </LinearLayout>

    </FrameLayout>
</layout>