<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title_text"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/dark_mode_setting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/volume_setting" />

                <SeekBar
                    android:id="@+id/volumeBar"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="100" />

                <TextView
                    android:id="@+id/volume_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_volume_text"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:id="@+id/button_back_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_button_text" />
        </LinearLayout>
    </FrameLayout>
</layout>