<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".Scoreboard">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard_title_text"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_back_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoreboard_highest_points" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoreboard_best_times" />

        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:id="@+id/layout_manager_recycler_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_scoreboard"
                tools:listitem="@layout/scoreboard_row_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>

</layout>