<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Play">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_text"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <GridView
            android:id="@+id/sudoku_board_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/light_gray"
            android:layout_margin="2dp"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"
            android:padding="2dp"
            android:numColumns="9">
        </GridView>

        <GridView
            android:id="@+id/numpad_grid"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/light_gray"
            android:horizontalSpacing="4dp"
            android:columnWidth="64dp"
            android:numColumns="3">
        </GridView>

        <Button
            android:id="@+id/button_win"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/win_button_text" />

        <Button
            android:id="@+id/button_lose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lose_button_text" />

    </LinearLayout>

</FrameLayout>
</layout>